--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT INFORMATION</title>
+    <link rel="stylesheet" href="Dee&shii.html">
 </head>
 <body>
-    <table border="10x">
-        <caption><u><b>information desk</b></u></caption>
-        <tr>
-            <th>name</th>
-            <th>landline</th>
-            <th>email address</th>
-        </tr>
-        <tr>
-            <td>Emily Daniels</td>
-            <td>0200149876</td>
-            <td>dee&shii@gmail.com</td>
-        </tr><br>
+    <table border="10">
+        <caption><u><b>Information Desk</b></u></caption>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Landline</th>
+                <th>Email Address</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Emily Daniels</td>
+                <td>0200149876</td>
+                <td>dee&shii@gmail.com</td>
+            </tr>
+        </tbody>
     </table>
+    <br>
+    <button style="color: aqua;" style="padding: 10px;"> <a href="Dee&shii.html">Click Here!</a></button>
 </body>
 </html>
