--- a/Dee&shii.html
+++ b/Dee&shii.html
@@ -6,10 +6,14 @@
     <title>FULL PACK CLOSET</title>
     <link rel="stylesheet" href="contact.html">
     <style>
-        .h1{
+        h1{
             background-color: gray;
             color: black;
         }
+h2{
+background-color:gray;
+color:black;
+
 
     </style>
 </head>
